드롭다운 위치 고정

--- a/frontserver/public/css/drop.css
+++ b/frontserver/public/css/drop.css
@@ -1,9 +1,9 @@
-.dropdown {
-  position: fixed;
+/* .dropdown {
+  position: absolute;
   display: none;
   top: 80px;
   left: 1118px;
-}
+} */
 
 .dropdown-wrap {
   width: 163px;
